--- a/trunk/PresentationLayer/AdminPresentationLayer.csproj
+++ b/trunk/PresentationLayer/AdminPresentationLayer.csproj
@@ -274,6 +274,8 @@
     <Content Include="Resources\Program.png" />
     <None Include="Resources\test.png" />
     <None Include="Resources\Results.png" />
+    <None Include="Resources\Splash.png" />
+    <None Include="Resources\Tatice-Cristal-Intense-Ok.ico" />
     <Content Include="Resources\Welcome.jpg" />
   </ItemGroup>
   <ItemGroup>
