--- a/trunk/ClientPresentationLayer/ClientPresentationLayer.csproj
+++ b/trunk/ClientPresentationLayer/ClientPresentationLayer.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionPresentation\Data\AnswerSheetDataController.cs" />
+    <Compile Include="QuestionPresentation\Data\QuestionDataListViewItem.cs" />
+    <Compile Include="QuestionPresentation\Data\QuestionDataListViewItemController.cs" />
     <Compile Include="QuestionPresentation\DislayImageForm.cs">
       <SubType>Form</SubType>
     </Compile>
