--- a/trunk/BusinessEntities/BusinessEntities.csproj
+++ b/trunk/BusinessEntities/BusinessEntities.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Commons\Commons.csproj">
