--- a/PresentationLayer/AdminPresentationLayer.csproj
+++ b/PresentationLayer/AdminPresentationLayer.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionController\GuiActionEventController.cs" />
@@ -134,6 +135,18 @@
     </Compile>
     <Compile Include="QuestionEditor\FillInBlankEditor.Designer.cs">
       <DependentUpon>FillInBlankEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuestionEditor\HTMLAnswerItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionEditor\HTMLAnswerItem.Designer.cs">
+      <DependentUpon>HTMLAnswerItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuestionEditor\HTMLQuestionEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuestionEditor\HTMLQuestionEditor.Designer.cs">
+      <DependentUpon>HTMLQuestionEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="QuestionEditor\Item.cs">
       <SubType>UserControl</SubType>
@@ -222,6 +235,12 @@
     <EmbeddedResource Include="QuestionEditor\DislayImageForm.resx">
       <DependentUpon>DislayImageForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="QuestionEditor\HTMLAnswerItem.resx">
+      <DependentUpon>HTMLAnswerItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuestionEditor\HTMLQuestionEditor.resx">
+      <DependentUpon>HTMLQuestionEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="QuestionEditor\Item.resx">
       <DependentUpon>Item.cs</DependentUpon>
     </EmbeddedResource>
@@ -286,6 +305,10 @@
     <ProjectReference Include="..\TestEquationEditor\EquationEditor\Editor.csproj">
       <Project>{B19FF7B5-8771-4222-A539-496B58ECCC12}</Project>
       <Name>Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TextControl\TextControl\TextControl.csproj">
+      <Project>{DA00B3D9-7CE5-4634-A7D2-9A6D3F92C382}</Project>
+      <Name>TextControl</Name>
     </ProjectReference>
     <ProjectReference Include="..\ThreadQueueManager\ThreadQueueManager.csproj">
       <Project>{134E9CBB-0EB0-4D3F-B526-0447BC0AD3DC}</Project>
