--- a/ClientPresentationLayer/ClientPresentationLayer.csproj
+++ b/ClientPresentationLayer/ClientPresentationLayer.csproj
@@ -69,6 +69,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionPresentation\HTMLQuestionPresentPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLQuestionPresentPanel.Designer.cs">
+      <DependentUpon>HTMLQuestionPresentPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLQuestionExplainPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLQuestionExplainPanel.Designer.cs">
+      <DependentUpon>HTMLQuestionExplainPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLPresentQuestionPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLPresentQuestionPanel.Designer.cs">
+      <DependentUpon>HTMLPresentQuestionPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="QuestionPresentation\Data\AnswerSheetDataController.cs" />
     <Compile Include="QuestionPresentation\Data\QuestionDataListViewItem.cs" />
     <Compile Include="QuestionPresentation\Data\QuestionDataListViewItemController.cs" />
@@ -77,6 +95,18 @@
     </Compile>
     <Compile Include="QuestionPresentation\DislayImageForm.Designer.cs">
       <DependentUpon>DislayImageForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLAnswerItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLAnswerItem.Designer.cs">
+      <DependentUpon>HTMLAnswerItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLQuestionItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPresentation\HTMLQuestionItem.Designer.cs">
+      <DependentUpon>HTMLQuestionItem.cs</DependentUpon>
     </Compile>
     <Compile Include="QuestionPresentation\PresentQuestionPanel.cs">
       <SubType>UserControl</SubType>
@@ -148,8 +178,23 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="QuestionPresentation\HTMLQuestionPresentPanel.resx">
+      <DependentUpon>HTMLQuestionPresentPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuestionPresentation\HTMLQuestionExplainPanel.resx">
+      <DependentUpon>HTMLQuestionExplainPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuestionPresentation\HTMLPresentQuestionPanel.resx">
+      <DependentUpon>HTMLPresentQuestionPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="QuestionPresentation\DislayImageForm.resx">
       <DependentUpon>DislayImageForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuestionPresentation\HTMLAnswerItem.resx">
+      <DependentUpon>HTMLAnswerItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuestionPresentation\HTMLQuestionItem.resx">
+      <DependentUpon>HTMLQuestionItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="QuestionPresentation\PresentQuestionPanel.resx">
       <DependentUpon>PresentQuestionPanel.cs</DependentUpon>
@@ -219,6 +264,10 @@
     <ProjectReference Include="..\TestApplication\BusinessLogicLayer.csproj">
       <Project>{38ED14A1-21E8-4CC7-84AF-18D8AC47D2F6}</Project>
       <Name>BusinessLogicLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TextControl\TextControl\TextControl.csproj">
+      <Project>{DA00B3D9-7CE5-4634-A7D2-9A6D3F92C382}</Project>
+      <Name>TextControl</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
