fix some code to build new version.

--- a/Commons/Commons.csproj
+++ b/Commons/Commons.csproj
@@ -58,6 +58,7 @@
     </Compile>
     <Compile Include="ConstantGUI.cs" />
     <Compile Include="FormatHelper.cs" />
+    <Compile Include="HtmlRemove.cs" />
     <Compile Include="IDataBE.cs" />
     <Compile Include="IDataItem.cs" />
     <Compile Include="ITranslateBE.cs" />
